// Vitest Snapshot v1

exports[`components > N8nCallout > should render additional slots correctly 1`] = `
"<div class=\\"n8n-callout callout custom round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a secondary callout.</n8n-text></span> &nbsp; <n8n-link size=\\"small\\">Do something!</n8n-link>
  </div>
  <n8n-link theme=\\"secondary\\" size=\\"small\\" bold=\\"true\\" underline=\\"true\\" to=\\"https://n8n.io\\">Learn more</n8n-link>
</div>"
`;

exports[`components > N8nCallout > should render custom theme correctly 1`] = `
"<div class=\\"n8n-callout callout custom round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a secondary callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render danger theme correctly 1`] = `
"<div class=\\"n8n-callout callout danger round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a danger callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render info theme correctly 1`] = `
"<div class=\\"n8n-callout callout info round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is an info callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render secondary theme correctly 1`] = `
"<div class=\\"n8n-callout callout secondary round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a secondary callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render success theme correctly 1`] = `
"<div class=\\"n8n-callout callout success round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a success callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render warning theme correctly 1`] = `
"<div class=\\"n8n-callout callout warning round\\" role=\\"alert\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\"><span class=\\"n8n-text compact size-medium regular n8n-icon n8n-icon\\"><!----></span></div><span class=\\"n8n-text size-small regular\\"><n8n-text size=\\"small\\">This is a warning callout.</n8n-text></span> &nbsp;
  </div>
</div>"
`;
